crates/apollo-compiler/test_data/diagnostics/0088_fragment_selection_set.txt
Error: type `Query` does not have a field `topProduct`
    ╭─[ 0088_fragment_selection_set.graphql:13:5 ]
    │
  1 │ type Query {
    │      ──┬──  
    │        ╰──── type `Query` defined here
    │ 
 13 │     topProduct {
    │     ─────┬────  
    │          ╰────── field `topProduct` selected here
    │ 
    │ Note: path to the field: `query getProduct → topProduct`
────╯
Error: type `Product` does not have a field `notExistingField`
    ╭─[ 0088_fragment_selection_set.graphql:22:3 ]
    │
  6 │ type Product {
    │      ───┬───  
    │         ╰───── type `Product` defined here
    │ 
 22 │   notExistingField
    │   ────────┬───────  
    │           ╰───────── field `notExistingField` selected here
    │ 
    │ Note: path to the field: `fragment productFragment → notExistingField`
────╯

